<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/connection_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A2F34C"
        android:layout_marginTop="20dp"
        android:text="@string/connection_status"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_secondary_variant"
        android:textSize="25sp"
        android:textStyle="italic"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:visibility="visible">

        <Button
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@color/teal_200"
            android:text="@string/On_Off"
            tools:ignore="TextContrastCheck"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/buttonDiscover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:background="@color/teal_200"
            android:text="@string/discover"
            tools:ignore="TextContrastCheck"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>


    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="195dp"
        android:layout_marginTop="40dp"
        android:background="@color/teal_200" />

    <TextView
        android:id="@+id/messageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/message"
        android:textAlignment="center"
        android:textSize="25sp"
        android:background="#A2F34C"
        android:textColor="@color/design_default_color_secondary_variant"
        android:textStyle="italic" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <EditText
            android:id="@+id/editTextTypeMsg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="32dp"
            android:text="@string/name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/sendButton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            android:autofillHints=""
            tools:ignore="LabelFor" />

        <ImageButton
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_send_24"
            app:layout_constraintBottom_toBottomOf="@id/editTextTypeMsg"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>